src/objects/WGUCourseInProgram__c.object
<CustomObject>
    <description>A many to many mapping that assigns which course are required to accomplish any degree program.</description>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipName>PAMS_Course_In_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSCourseID__c</fullName>
        <description>The unique ID that represents the course in PAMS that this mapping should be linked to in SalesForce.</description>
        <label>PAMS Course ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAMSProgramID__c</fullName>
        <description>The unique id from PAMS that represents the Degree Program that this mapping should be linked to.</description>
        <label>PAMS Program ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>WGU Course In Programs</relationshipLabel>
        <relationshipName>WGUCourseInPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The recommended order of the course in the program,</description>
        <inlineHelpText>The recommended order of the course in the program,</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransferDegree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What Specific Degree or certification will satisfy this course during the transfer evaluation</description>
        <label>Transfer Degree</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Course In Programs (Transfer Degree)</relationshipLabel>
        <relationshipName>WGUCourseI_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferMinimumDegree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The minimum degree nessesary to be able to have this course satisfied in this program</description>
        <inlineHelpText>The minimum degree nessesary to be able to have this course satisfied in this program</inlineHelpText>
        <label>Transfer Minimum Degree</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Course In Programs</relationshipLabel>
        <relationshipName>WGUCourseInPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferRelatedProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field specifies whether or not the Degree and or the Minimum degree will only satisfy the requirement if it&apos;s a related field</description>
        <inlineHelpText>This field specifies whether or not the Degree and or the Minimum degree will only satisfy the requirement if it&apos;s a related field</inlineHelpText>
        <label>Transfer Related Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransferRuleExt__c</fullName>
        <description>Extended transfer rule for the text that is over 255 characters</description>
        <inlineHelpText>Extended transfer rule for the text that is over 255 characters</inlineHelpText>
        <label>Transfer Rule Ext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TransferRule__c</fullName>
        <description>rule to determine whether or not this course is transferable</description>
        <inlineHelpText>What is the rule to determine whether or not this course is transferable?</inlineHelpText>
        <label>Transfer Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transferable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox field to indicate whether or not the course is transferable</description>
        <inlineHelpText>Is this course transferable?</inlineHelpText>
        <label>Transferable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>The unique combination ID to identify a record from PAMS.</description>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>WGU Course In Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Program__c</columns>
        <columns>Course__c</columns>
        <columns>Transferable__c</columns>
        <columns>PAMSProgramID__c</columns>
        <columns>UniqueID__c</columns>
        <columns>TransferDegree__c</columns>
        <columns>TransferMinimumDegree__c</columns>
        <columns>TransferRelatedProgram__c</columns>
        <columns>TransferRule__c</columns>
        <columns>TransferRuleExt__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transferable</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Sequence__c</columns>
        <columns>Course__c</columns>
        <columns>Program__c</columns>
        <columns>Transferable__c</columns>
        <columns>TransferRule__c</columns>
        <columns>TransferMinimumDegree__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transferable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TransferMinimumDegree__c</field>
            <operation>equals</operation>
            <value>AS</value>
        </filters>
        <label>Transferable</label>
        <sharedTo>
            <roleAndSubordinatesInternal>TranscriptTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TransferableAll</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Sequence__c</columns>
        <columns>Course__c</columns>
        <columns>Program__c</columns>
        <columns>Transferable__c</columns>
        <columns>TransferRule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transferable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Transferable All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WGU Course In Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>